--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,21 +1,43 @@
-// @font-face {
-//   font-style: normal;
-//   font-weight: 400;
-//   font-family: "Rouble";
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "roboto-condensed";
 
-//   font-display: swap;
-//   src:
-//     url("../fonts/rouble.woff2") format("woff2"),
-//     url("../fonts/rouble.woff") format("woff");
-// }
+  font-display: swap;
+  src:
+    url("/source/fonts/roboto-condensed.woff2") format("woff2"),
+    url("/source/fonts/roboto-condensed.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 700;
+  font-family: "roboto-condensed";
+
+  font-display: swap;
+  src:
+    url("/source/fonts/roboto-condensed-bold.woff2") format("woff2"),
+    url("/source/fonts/roboto-condensed-bold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 500;
+  font-family: "roboto";
+
+  font-display: swap;
+  src:
+    url("/source/fonts/roboto-medium.woff2") format("woff2"),
+    url("/source/fonts/roboto-medium.woff") format("woff");
+}
 
 @font-face {
   font-style: normal;
   font-weight: 400;
-  font-family: "";
+  font-family: "pt-mono";
 
   font-display: swap;
   src:
-    url("../fonts/.woff2") format("woff2"),
-    url("../fonts/.woff") format("woff");
+    url("/source/fonts/PTMono-Regular.woff2") format("woff2"),
+    url("/source/fonts/PTMono-Regular.woff") format("woff");
 }
