--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -16,7 +16,7 @@ html {
   font-weight: 400;
   font-size: $fz-default;
   line-height: 24px;
-  font-family: $ff-placeholder;
+  font-family: $ff-pt-mono;
   color: $color-default-black;
 
   -webkit-font-smoothing: antialiased;
@@ -44,6 +44,9 @@ video {
   display: block;
   max-width: 100%;
   height: auto;
+
+  object-fit: cover;
+  object-position: center;
 }
 
 textarea {
