--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,6 +12,7 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 
 $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
+$color-alice-blue:                  #F2F5F6;
 
 // Gradient
 
@@ -28,6 +29,12 @@ $fz-default:                        16px;
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
+
+$ff-pt-mono:                         "Pt-mono", "Arial", sans-serif;
+
+$ff-roboto-condensed:               "Roboto-condensed", "Arial", sans-serif;
+
+$ff-roboto:                         "Roboto", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
