Сделала шапку, главный экран, начала преимущества и повдал

--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -5,8 +5,8 @@
 
   font-display: swap;
   src:
-    url("/source/fonts/roboto-condensed.woff2") format("woff2"),
-    url("/source/fonts/roboto-condensed.woff") format("woff");
+    url("../fonts/roboto-condensed.woff2") format("woff2"),
+    url("../fonts/roboto-condensed.woff") format("woff");
 }
 
 @font-face {
@@ -16,8 +16,8 @@
 
   font-display: swap;
   src:
-    url("/source/fonts/roboto-condensed-bold.woff2") format("woff2"),
-    url("/source/fonts/roboto-condensed-bold.woff") format("woff");
+    url("../fonts/roboto-condensed-bold.woff2") format("woff2"),
+    url("../fonts/roboto-condensed-bold.woff") format("woff");
 }
 
 @font-face {
@@ -27,8 +27,8 @@
 
   font-display: swap;
   src:
-    url("/source/fonts/roboto-medium.woff2") format("woff2"),
-    url("/source/fonts/roboto-medium.woff") format("woff");
+    url("../fonts/roboto-medium.woff2") format("woff2"),
+    url("../fonts/roboto-medium.woff") format("woff");
 }
 
 @font-face {
@@ -38,6 +38,6 @@
 
   font-display: swap;
   src:
-    url("/source/fonts/PTMono-Regular.woff2") format("woff2"),
-    url("/source/fonts/PTMono-Regular.woff") format("woff");
+    url("../fonts/PTMono-Regular.woff2") format("woff2"),
+    url("../fonts/PTMono-Regular.woff") format("woff");
 }
