--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,9 +18,14 @@
 // Blocks
 // ---------------------------------
 
-@import "blocks/btn";
+@import "blocks/button";
 @import "blocks/modal";
 @import "blocks/main-header.scss";
+@import "blocks/logo.scss";
+@import "blocks/intro.scss";
+@import "blocks/featuries.scss";
+@import "blocks/about.scss";
+@import "blocks/main-footer.scss";
 
 // ---------------------------------
 
