--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -4,33 +4,91 @@
   right: 0;
   left: 0;
 
-  background: linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
+  background: linear-gradient(180deg, $color-black-pearl 84.9%, rgba(4, 24, 39, 0) 100%);
+
+  @include vp-1023 {
+    position: relative;
+  }
 }
 
-.main-header__logo-text {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+.main-header__wrapper {
+  display: grid;
+  grid-template-columns: 28% auto 21%;
+  column-gap: 4%;
+  padding-top: 28px;
+  padding-bottom: 30px;
 
-  color: $color-default-white;
-
-  &--big {
-    font-family: $ff-roboto-condensed;
-    font-weight: 700;
-    font-size: 25px;
-    line-height: 29px;
-
-    color: $color-alice-blue;
+  @include vp-1023 {
+    grid-template-columns: 1fr 1fr;
+    padding-top: 20px;
+    padding-bottom: 25px;
   }
 
-  &--small {
-    font-family: $ff-roboto;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 14px;
-    color: $color-default-white;
-    opacity: 0.7;
+  @include vp-767 {
+    padding-top: 14px;
+    padding-bottom: 20px;
+  }
+}
+
+.main-header__contacts {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  @include vp-1023 {
+    margin-left: auto;
+    align-items: flex-start;
+    padding-top: 10px;
+    padding-right: 12px;
+  }
+
+  @include vp-767 {
+    min-width: auto;
+    margin-left: auto;
+    padding-top: 6px;
+    padding-right: 2px;
+  }
+}
+
+.main-header__contacts-link {
+  display: flex;
+  align-items: center;
+  padding-left: 7px;
+  line-height: 18px;
+  color: $color-default-white;
+
+  & p {
+    display: block;
+
+    @include vp-1023 {
+      display: none;
+    }
+  }
+
+  & svg {
+    fill: $color-deep-sky-blue;
+    margin-right: 15px;
+  }
+
+  @include vp-1023 {
+    padding-left: 30px;
+  }
+
+  @include hover-focus {
+    opacity: 0.8;
+  }
+}
+
+.main-header__button {
+  max-width: 160px;
+  margin-left: auto;
+  align-self: center;
+
+  color: $color-alice-blue;
+
+  background-color: transparent;
+  border: 1px solid $color-alice-blue;
+
+  @include vp-1023 {
+    display: none;
   }
 }
