--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -7,8 +7,8 @@
   /* stylelint-disable-next-line */
   min-height: calc(100 * var(--vh, 1vh));
 
-  .header,
-  .footer {
+  .main-header,
+  .main-footer {
     flex-shrink: 0;
   }
 
