Сделала попап, форму

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -5,13 +5,14 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-color: $color-black-pearl;
+  color: $color-alice-blue;
 
   @include vp-1023 {
     min-height: 540px;
     margin-top: -15px;
     background-position: -135px -101px;
     background-size: 1462px auto;
-}
+  }
 
   @include vp-767 {
     min-height: 490px;
@@ -87,7 +88,7 @@
       margin-left: 0;
       padding: 12px;
       font-size: 14px;
-    line-height: 16px;
+      line-height: 16px;
     }
   }
 }
