--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -3,6 +3,7 @@
   top: 0;
   right: 0;
   left: 0;
+  z-index: 2;
 
   background: linear-gradient(180deg, $color-black-pearl 84.9%, rgba(4, 24, 39, 0) 100%);
 
