--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,10 @@
 @import "blocks/intro.scss";
 @import "blocks/featuries.scss";
 @import "blocks/about.scss";
+@import "blocks/services.scss";
+@import "blocks/feedback.scss";
+@import "blocks/form.scss";
+@import "blocks/accordion.scss";
 @import "blocks/main-footer.scss";
 
 // ---------------------------------
