--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -2,11 +2,34 @@
   max-width: 1220px;
   display: grid;
   grid-template-columns: 150px 82%;
-  column-gap: 103px;
+  column-gap: 100px;
   padding: 0;
-  padding-top: 46px;
-  padding-bottom: 80px;
-  padding-left: 30px;
+  padding-top: 120px;
+  padding-bottom: 100px;
+
+  @include vp-1023 {
+    display: grid;
+    grid-template-columns: 150px 74%;
+    column-gap: 25px;
+    padding-bottom: 80px;
+  }
+
+  @include vp-767 {
+    grid-template-columns: 1fr;
+    padding-bottom: 80px;
+  }
+}
+
+.about__years {
+  @include vp-767 {
+    display: none;
+  }
+}
+
+.about__text {
+  @include vp-767 {
+    margin-bottom: 10px;
+  }
 }
 
 .about__description {
@@ -14,28 +37,50 @@
 
   & h3 {
     margin: 0;
-    margin-bottom: 12px;
     font-family: $ff-roboto-condensed;
     font-size: 36px;
     line-height: 51px;
+
+    @include vp-767 {
+      font-size: 28px;
+      line-height: 140%;
+    }
   }
 
   & p {
+    margin-top: 15px;
     line-height: 22px;
+
+    @include vp-767 {
+      font-size: 14px;
+      line-height: 134%;
+      margin-bottom: 20px;
+    }
+
+    @include vp-1023 {
+      margin-top: 14px;
+    }
   }
 }
 
-.about__text {
-  margin: 0;
-  margin-bottom: 20px;
+[data-text] {
+  @include vp-767 {
+    max-height: 220px;
+    overflow: hidden;
+  }
 }
 
-.about__text-more {
-  margin: 0;
+[data-text].is-open {
+  @include vp-767 {
+    max-height: 350px;
+  }
+}
+
+[data-more] {
   display: none;
 }
 
-.about__text-more--opened {
+[data-more].is-open {
   display: block;
 }
 
@@ -48,4 +93,14 @@
   background-color: transparent;
   border: 1px solid $color-deep-sky-blue;
   color: $color-deep-sky-blue;
+
+  @include vp-1023 {
+    margin-top: 18px;
+  }
+
+  @include vp-767 {
+    margin-top: 15px;
+    min-width: 160px;
+    padding: 9px 25px;
+  }
 }
