--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,7 +14,9 @@ $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
 $color-alice-blue:                  #f2f5f7;
 $color-deep-sky-blue:               #00b2ff;
+$color-cerulean:                    #026593;
 $color-black-pearl:                 #041827;
+$color-black-pearl-button:          #041427;
 $color-whisper:                     #ebebeb;
 
 // Gradient
