сделала аккордеон, доделала форму

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -25,4 +25,9 @@
   @include hover-focus {
     opacity: 0.8;
   }
+
+  &:active {
+    background-color: $color-black-pearl-button;
+    opacity: 0.5;
+  }
 }
