--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,21 +1,23 @@
 .about {
-  max-width: 1220px;
   display: grid;
   grid-template-columns: 150px 82%;
   column-gap: 100px;
+
+  max-width: 1203px;
   padding: 0;
   padding-top: 120px;
   padding-bottom: 100px;
 
   @include vp-1023 {
-    display: grid;
     grid-template-columns: 150px 74%;
     column-gap: 25px;
+
     padding-bottom: 80px;
   }
 
   @include vp-767 {
     grid-template-columns: 1fr;
+
     padding-bottom: 80px;
   }
 }
@@ -28,68 +30,67 @@
 
 .about__text {
   @include vp-767 {
-    margin-bottom: 10px;
-  }
-}
-
-.about__description {
-  color: $color-black-pearl;
-
-  & h3 {
-    margin: 0;
-    font-family: $ff-roboto-condensed;
-    font-size: 36px;
-    line-height: 51px;
-
-    @include vp-767 {
-      font-size: 28px;
-      line-height: 140%;
-    }
-  }
-
-  & p {
-    margin-top: 15px;
-    line-height: 22px;
-
-    @include vp-767 {
-      font-size: 14px;
-      line-height: 134%;
-      margin-bottom: 20px;
-    }
-
-    @include vp-1023 {
-      margin-top: 14px;
-    }
-  }
-}
-
-[data-text] {
-  @include vp-767 {
     max-height: 220px;
     overflow: hidden;
   }
 }
 
-[data-text].is-open {
+.about__text.is-open {
   @include vp-767 {
     max-height: 350px;
   }
 }
 
-[data-more] {
+.about__more {
   display: none;
 }
 
-[data-more].is-open {
+.about__more.is-open {
   display: block;
+}
+
+.about__description h3 {
+  margin: 0;
+
+  font-family: $ff-roboto-condensed;
+  font-size: 36px;
+  line-height: 51px;
+
+  color: $color-black-pearl;
+
+  @include vp-767 {
+    font-size: 28px;
+    line-height: 140%;
+  }
+}
+
+.about__description p {
+  margin-top: 15px;
+
+  line-height: 22px;
+
+  color: $color-black-pearl;
+
+  @include vp-1023 {
+    margin-top: 14px;
+  }
+
+  @include vp-767 {
+    margin-bottom: 20px;
+
+    font-size: 14px;
+    line-height: 134%;
+  }
 }
 
 .about__button {
   display: flex;
   justify-content: center;
+
   min-width: 180px;
   margin-top: 40px;
   padding: 13px 25px;
+
   background-color: transparent;
   border: 1px solid $color-deep-sky-blue;
   color: $color-deep-sky-blue;
@@ -102,5 +103,14 @@
     margin-top: 15px;
     min-width: 160px;
     padding: 9px 25px;
+  }
+
+  @include hover-focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    background-color: $color-black-pearl-button;
+    opacity: 1;
   }
 }
