--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -1,20 +1,16 @@
-.accordion {
-  @include vp-767 {
-    padding-bottom: 20px;
-  }
-}
-
 .accordion__button {
   position: relative;
   margin: 0;
   margin-bottom: 20px;
   padding: 7px 0 3px;
+
   font-family: $ff-roboto-condensed;
   font-weight: 400;
   font-size: 15px;
   line-height: 16px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
+
   color: $color-default-white;
   border: 0;
   outline: 0;
@@ -26,8 +22,11 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+
     width: 100%;
-    padding: 23px 25px 0;
+    padding-top: 22px;
+    padding-left: 24px;
+    padding-bottom: 20px;
     margin-bottom: 0;
 
     &::after,
@@ -38,6 +37,7 @@
       right: 25px;
       height: 1px;
       width: 15px;
+
       background-color: #c4c4c4;
     }
 
@@ -49,10 +49,41 @@
 
 .accordion__button.is-active {
   @include vp-767 {
-    padding-bottom: 15px;
-
     &::before {
       transform: rotate(0deg);
     }
+  }
+}
+
+.accordion__button--nojs {
+  @include vp-767 {
+    &::after,
+    &::before {
+      display: none;
+    }
+  }
+}
+
+.accordion__button--nojs + .accordion__item {
+  @include vp-767 {
+    max-height: fit-content;
+    overflow: visible;
+  }
+}
+
+.accordion__item {
+  &--nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 45px;
+  }
+
+  @include vp-1023 {
+    display: block;
+  }
+
+  @include vp-767 {
+    max-height: 0;
+    overflow: hidden;
   }
 }
