--- a/source/sass/blocks/featuries.scss
+++ b/source/sass/blocks/featuries.scss
@@ -1,10 +1,10 @@
 .featuries {
+  max-width: 1240px;
   padding: 0;
   padding-top: 120px;
-  max-width: 1222px;
 
   @include vp-1023 {
-    padding-top: 83px;
+    padding-top: 78px;
     padding-bottom: 76px;
   }
 
@@ -15,16 +15,17 @@
 }
 
 .featuries__list {
-  margin: 0;
-  padding: 0;
-  /* margin-left: 35px;
-  margin-bottom: 75px; */
-  list-style: none;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 300px);
   column-gap: 31px;
   row-gap: 30px;
+
+  margin: 0;
+  padding: 0;
+  margin-left: 20px;
+
+  list-style: none;
 
   @include vp-1023 {
     grid-template-columns: repeat(2, 1fr);
@@ -32,9 +33,10 @@
   }
 
   @include vp-767 {
-    width: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 340px) repeat(2, 325px);
+
+    width: 100%;
   }
 }
 
@@ -43,8 +45,13 @@
   padding-left: 40px;
   padding-right: 25px;
   padding-bottom: 68px;
+
   border: 1px solid $color-whisper;
   border-left: 5px solid $color-deep-sky-blue;
+
+  & svg {
+    fill: $color-deep-sky-blue;
+  }
 
   @include vp-1023 {
     padding-right: 25px;
@@ -63,48 +70,6 @@
     }
   }
 
-  & svg {
-    fill: $color-deep-sky-blue;
-  }
-
-  & h3 {
-    margin: 0;
-    margin-top: 14px;
-    margin-bottom: 15px;
-    font-family: $ff-roboto-condensed;
-    font-size: 24px;
-    line-height: 140%;
-
-    color: $color-deep-sky-blue;
-
-    @include vp-1023 {
-      margin-top: 9px;
-      margin-bottom: 11px;
-      line-height: 135%;
-    }
-
-    @include vp-767 {
-      font-size: 20px;
-      line-height: 140%;
-    }
-  }
-
-  & p {
-    margin: 0;
-    line-height: 135%;
-    color: $color-black-pearl;
-
-    @include vp-1023 {
-      font-size: 16px;
-      line-height: 135%;
-    }
-
-    @include vp-767 {
-      font-size: 14px;
-      line-height: 135%;
-    }
-  }
-
   @include hover {
     border-color: $color-deep-sky-blue;
     background-color: $color-deep-sky-blue;
@@ -120,6 +85,34 @@
     & svg {
       fill: $color-alice-blue;
     }
+  }
+}
+
+.featuries__item h3 {
+  margin: 0;
+  margin-top: 14px;
+  margin-bottom: 15px;
+
+  font-family: $ff-roboto-condensed;
+  font-size: 24px;
+  line-height: 140%;
+
+  color: $color-deep-sky-blue;
+
+  @include vp-1023 {
+    margin-top: 9px;
+    margin-bottom: 11px;
+
+    line-height: 135%;
+  }
+
+  @include vp-767 {
+    font-size: 20px;
+    line-height: 140%;
+  }
+
+  @mixin hover-focus {
+    color: $color-alice-blue;
   }
 }
 
@@ -143,5 +136,22 @@
   @include vp-767 {
     margin-top: 13px;
     margin-bottom: 14px;
+  }
+}
+
+.featuries__item p {
+  margin: 0;
+
+  line-height: 135%;
+  color: $color-black-pearl;
+
+  @include vp-1023 {
+    font-size: 16px;
+    line-height: 135%;
+  }
+
+  @include vp-767 {
+    font-size: 14px;
+    line-height: 135%;
   }
 }
