--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -18,16 +18,27 @@
   }
 }
 
-.logo__text {
-  margin: 0;
-  margin-left: 15px;
+.logo__inner {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 
+  margin: 0;
+  margin-left: 15px;
+
   color: $color-default-white;
 
+  @include vp-767 {
+    display: none;
+
+    &--footer {
+      display: flex;
+    }
+  }
+}
+
+.logo__text {
   &--big {
     font-family: $ff-roboto-condensed;
     font-weight: 700;
@@ -44,13 +55,5 @@
     line-height: 14px;
     color: $color-default-white;
     opacity: 0.7;
-  }
-
-  @include vp-767 {
-    display: none;
-
-    &--footer {
-      display: flex;
-    }
   }
 }
