--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -4,8 +4,9 @@
 }
 
 .services__wrapper {
+  max-width: 1240px;
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 0;
   padding-top: 65px;
   padding-bottom: 140px;
 
@@ -18,38 +19,43 @@
     padding-top: 23px;
     padding-bottom: 85px;
   }
+}
 
-  & h2 {
-    font-family: $ff-roboto-condensed;
-    margin: 0;
-    margin-bottom: 55px;
+.services__wrapper h2 {
+  margin: 0;
+  margin-bottom: 55px;
+
+  font-family: $ff-roboto-condensed;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: 400;
+
+  @include vp-1023 {
+    margin-bottom: 38px;
+    margin-top: 33px;
+
     font-size: 36px;
     line-height: 51px;
-    font-weight: 400;
+  }
 
-    @include vp-1023 {
-      font-size: 36px;
-      line-height: 51px;
-      margin-bottom: 38px;
-      margin-top: 33px;
-    }
+  @include vp-767 {
+    margin-bottom: 30px;
+    margin-top: 22px;
 
-    @include vp-767 {
-      font-size: 28px;
-      line-height: 140%;
-      margin-bottom: 30px;
-      margin-top: 22px;
-    }
+    font-size: 28px;
+    line-height: 140%;
   }
 }
 
 .services__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 85px;
+
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
   box-sizing: border-box;
 
   @include vp-1023 {
@@ -68,19 +74,19 @@
 }
 
 .services__title--tablet {
+  display: block;
+
   @include vp-767 {
     display: none;
   }
-
-  display: block;
 }
 
 .services__title--mobile {
+  display: none;
+
   @include vp-767 {
     display: block;
   }
-
-  display: none;
 }
 
 .services__item {
@@ -94,7 +100,7 @@
     background-image: url("../../img/intro@2x.webp");
   }
 
-  &:nth-child(1) {
+  &:nth-child(3n+1) {
     background-size: 430%;
     background-position: 17% 70%;
 
@@ -109,7 +115,7 @@
     }
   }
 
-  &:nth-child(2) {
+  &:nth-child(3n+2) {
     background-size: 430%;
     background-position: 47% 70%;
 
@@ -124,7 +130,7 @@
     }
   }
 
-  &:nth-child(3) {
+  &:nth-child(3n+3) {
     background-size: 430%;
     background-position: 78% 70%;
 
@@ -146,6 +152,7 @@
     height: 60px;
     bottom: 0;
     right: 0;
+
     background-color: $color-deep-sky-blue;
     background-image: url("../../img/svg/arrow.svg");
     background-position: center;
@@ -155,39 +162,43 @@
     @include vp-767 {
       width: 40px;
       height: 40px;
+
       background-size: 12%;
     }
   }
+}
 
-  & a {
-    color: $color-default-white;
-  }
+.services__item a {
+  color: $color-default-white;
+}
 
-  & h4 {
-    width: 60%;
-    margin: 0;
-    padding-top: 48px;
-    padding-left: 40px;
-    font-family: $ff-roboto-condensed;
-    font-weight: 400;
+.services__item h3 {
+  width: 60%;
+  margin: 0;
+  padding-top: 48px;
+  padding-left: 40px;
+
+  font-family: $ff-roboto-condensed;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+
+  @include vp-1023 {
+    width: 25%;
+    padding-top: 35px;
+    padding-left: 45px;
+
     font-size: 20px;
     line-height: 30px;
+  }
 
-    @include vp-1023 {
-      width: 25%;
-      padding-top: 35px;
-      padding-left: 45px;
-      font-size: 20px;
-      line-height: 30px;
-    }
+  @include vp-767 {
+    width: 65%;
+    padding-top: 26px;
+    padding-left: 0;
 
-    @include vp-767 {
-      width: 65%;
-      padding-top: 26px;
-      padding-left: 0;
-      font-size: 18px;
-      line-height: 30px;
-    }
+    font-size: 18px;
+    line-height: 30px;
   }
 }
 
@@ -205,10 +216,12 @@
 
 .services__link {
   position: relative;
+
   display: block;
   height: 100%;
   width: 100%;
   min-height: 650px;
+
   cursor: pointer;
 
   @include vp-1023 {
