--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,43 +1,65 @@
 .about {
-  display: grid;
-  grid-template-columns: 150px 82%;
-  column-gap: 100px;
-
-  max-width: 1203px;
-  padding: 0;
   padding-top: 120px;
-  padding-bottom: 100px;
+  padding-bottom: 120px;
+  padding-right: 0;
+  padding-left: 0;
 
   @include vp-1023 {
-    grid-template-columns: 150px 74%;
-    column-gap: 25px;
-
+    padding-top: 40px;
     padding-bottom: 80px;
   }
 
   @include vp-767 {
-    grid-template-columns: 1fr;
-
+    padding-top: 0;
     padding-bottom: 80px;
   }
 }
 
-.about__years {
-  @include vp-767 {
-    display: none;
+.about__description {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 150px;
+    height: 320px;
+    background-image: url("../img/year.png");
+    background-repeat: no-repeat;
+    top: 0;
+    left: 20px;
+
+    @include retina {
+      background-image: url("../../img/year@2x.png");
+      background-size: cover;
+    }
+
+    @include vp-1023 {
+      top: 3px;
+      left: -3px;
+    }
+
+    @include vp-767 {
+      display: none;
+    }
   }
 }
 
 .about__text {
+  max-height: 210px;
+  overflow: hidden;
+
+  @include vp-1023 {
+    max-height: 250px;
+  }
+
   @include vp-767 {
-    max-height: 220px;
-    overflow: hidden;
+    max-height: 210px;
   }
 }
 
 .about__text.is-open {
   @include vp-767 {
-    max-height: 350px;
+    max-height: 100%;
   }
 }
 
@@ -51,33 +73,43 @@
 
 .about__description h3 {
   margin: 0;
+  margin-left: 21.5%;
+  margin-bottom: 15px;
 
   font-family: $ff-roboto-condensed;
+  font-weight: 400;
   font-size: 36px;
   line-height: 51px;
 
   color: $color-black-pearl;
 
+  @include vp-1023 {
+    margin-bottom: 12px;
+    margin-left: 26.5%;
+  }
+
   @include vp-767 {
+    margin-left: 0;
     font-size: 28px;
     line-height: 140%;
   }
 }
 
 .about__description p {
-  margin-top: 15px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  margin-left: 21.5%;
 
   line-height: 22px;
 
   color: $color-black-pearl;
 
   @include vp-1023 {
-    margin-top: 14px;
+    margin-left: 26.5%;
   }
 
   @include vp-767 {
-    margin-bottom: 20px;
-
+    margin-left: 0;
     font-size: 14px;
     line-height: 134%;
   }
@@ -88,7 +120,8 @@
   justify-content: center;
 
   min-width: 180px;
-  margin-top: 40px;
+  margin-top: 20px;
+  margin-left: 21.5%;
   padding: 13px 25px;
 
   background-color: transparent;
@@ -96,11 +129,13 @@
   color: $color-deep-sky-blue;
 
   @include vp-1023 {
-    margin-top: 18px;
+    margin-top: 27px;
+    margin-left: 26.5%;
   }
 
   @include vp-767 {
-    margin-top: 15px;
+    margin-top: 10px;
+    margin-left: 0;
     min-width: 160px;
     padding: 9px 25px;
   }
