Исправила пути к картинкам

--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -15,7 +15,7 @@
     top: 246px;
     right: 55.2%;
 
-    background-image: url("../../img/paper_airplane.webp");
+    background-image: url("../img/paper_airplane.webp");
     background-repeat: no-repeat;
 
     @include vp-1023 {
