--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -139,7 +139,7 @@
     right: 0;
 
     background-color: $color-deep-sky-blue;
-    background-image: url("../../img/svg/arrow.svg");
+    background-image: url("../img/svg/arrow.svg");
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 3px 0 0 0;
