--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -29,7 +29,7 @@
     left: 20px;
 
     @include retina {
-      background-image: url("../../img/year@2x.png");
+      background-image: url("../img/year@2x.png");
       background-size: cover;
     }
 
