--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -4,9 +4,9 @@
 }
 
 .services__wrapper {
-  max-width: 1240px;
+  max-width: 1220px;
   padding-right: 0;
-  padding-left: 8px;
+  padding-left: 0;
   padding-top: 65px;
   padding-bottom: 140px;
 
