--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -103,10 +103,16 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
 
   margin: 0;
   padding: 0;
   list-style: none;
+
+  & li {
+    width: 40px;
+    height: 40px;
+  }
 
   & a {
     @include hover-focus {
@@ -120,6 +126,10 @@
   padding: 0;
   list-style: none;
 
+  & li {
+    margin-bottom: 8px;
+  }
+
   @include vp-767 {
     padding-left: 24px;
   }
@@ -130,8 +140,6 @@
 }
 
 .main-footer__nav-list a {
-  display: block;
-  margin-bottom: 8px;
   max-width: 220px;
 
   line-height: 135%;
@@ -145,6 +153,10 @@
 .main-footer__contacts {
   display: grid;
   row-gap: 10px;
+
+  & li {
+    margin-bottom: 8px;
+  }
 
   @include vp-1023 {
     row-gap: 9px;
@@ -174,9 +186,6 @@
 }
 
 .main-footer__contacts-phone a {
-  display: block;
-  margin-bottom: 8px;
-
   line-height: 135%;
   color: rgba($color-default-white, 0.7);
 
