--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -15,12 +15,8 @@
 }
 
 .main-header__wrapper {
-  /* display: grid;
-  grid-template-columns: 28% auto 21%;
-  column-gap: 4%; */
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
 
   padding-left: 20px;
@@ -29,41 +25,38 @@
   padding-bottom: 30px;
 
   @include vp-1023 {
-    grid-template-columns: 1fr 1fr;
+    align-items: flex-start;
 
     padding-top: 20px;
     padding-bottom: 25px;
   }
 
   @include vp-767 {
+    align-items: center;
     padding-top: 14px;
     padding-bottom: 20px;
   }
 }
 
 .main-header__contacts {
-  /* display: grid;
-  grid-template-columns: 1fr 1fr; */
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  min-width: 467px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 28px;
+  width: 480px;
+  margin-left: auto;
 
   @include vp-1023 {
-    align-items: flex-start;
-    min-width: 97px;
+    width: auto;
+    max-width: 440px;
+    gap: 20px;
 
-    margin-left: auto;
-    margin-bottom: 25px;
     padding-top: 10px;
-    padding-right: 12px;
+    padding-right: 20px;
   }
 
   @include vp-767 {
-    min-width: auto;
-    margin-left: auto;
-    padding-top: 6px;
+    max-width: 200px;
     padding-right: 2px;
   }
 }
@@ -71,26 +64,31 @@
 .main-header__contacts-link {
   display: flex;
   align-items: center;
+  width: fit-content;
+  gap: 15px;
 
-  min-width: 210px;
-  padding-left: 7px;
   line-height: 18px;
 
   color: $color-default-white;
 
   & svg {
-    margin-right: 15px;
-
     fill: $color-deep-sky-blue;
   }
 
   @include vp-1023 {
-    min-width: 20px;
-    padding-left: 30px;
+    justify-content: center;
+    min-width: auto;
+    width: 40px;
+    height: 40px;
   }
 
   @include hover-focus {
     opacity: 0.8;
+  }
+
+  @include vp-767 {
+    width: 40px;
+    height: 40px;
   }
 }
 
@@ -103,7 +101,8 @@
 }
 
 .main-header__button {
-  align-self: center;
+  margin-right: 6%;
+  margin-left: auto;
 
   max-width: 160px;
 
