--- a/source/sass/blocks/featuries.scss
+++ b/source/sass/blocks/featuries.scss
@@ -1,7 +1,10 @@
 .featuries {
-  max-width: 1240px;
   padding: 0;
   padding-top: 120px;
+
+  @include vp-1439 {
+    padding: 0 20px 120px;
+  }
 
   @include vp-1023 {
     padding-top: 78px;
@@ -17,24 +20,23 @@
 .featuries__list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 300px);
+  grid-template-rows: repeat(2, minmax(300px, max-content));
   column-gap: 31px;
   row-gap: 30px;
 
   margin: 0;
   padding: 0;
-  margin-left: 20px;
 
   list-style: none;
 
   @include vp-1023 {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 360px);
+    grid-template-rows: repeat(2, minmax(360px, max-content));
   }
 
   @include vp-767 {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 340px) repeat(2, 325px);
+    grid-template-rows: minmax(325px, 1fr);
 
     width: 100%;
   }
