--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -61,7 +61,7 @@
   }
 }
 
-.main-footer__socials {
+/* .main-footer__socials {
   width: 41%;
   margin-left: 14px;
   margin-top: 35px;
@@ -76,7 +76,7 @@
     margin-left: 0;
     margin-top: 20px;
   }
-}
+} */
 
 .main-footer__accordion {
   padding-left: 8px;
@@ -102,15 +102,33 @@
 .main-footer__socials-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+  max-width: 215px;
 
   margin: 0;
   padding: 0;
   list-style: none;
 
   & a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+
+    & svg {
+      fill: $color-alice-blue;
+    }
+
+    & svg path {
+      fill: $color-black-pearl;
+    }
+
     @include hover-focus {
-      opacity: 0.8;
+      svg {
+        fill: $color-deep-sky-blue;
+      }
     }
   }
 }
@@ -129,11 +147,12 @@
   }
 }
 
-.main-footer__nav-list a {
-  display: block;
-  margin-bottom: 8px;
+.main-footer__nav-list li {
   max-width: 220px;
+  margin-bottom: 8px;
+}
 
+.main-footer__nav-list a {
   line-height: 135%;
   color: rgba($color-default-white, 0.7);
 
@@ -174,9 +193,6 @@
 }
 
 .main-footer__contacts-phone a {
-  display: block;
-  margin-bottom: 8px;
-
   line-height: 135%;
   color: rgba($color-default-white, 0.7);
 
