--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -32,10 +32,6 @@
   &__wrapper {
     position: relative;
 
-    display: flex;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     min-height: 100%;
     padding: 60px 40px;
@@ -60,21 +56,25 @@
     position: relative;
 
     width: 500px;
-    padding: 40px;
+    min-height: 610px;
+    margin: 85px 35.7% auto;
+    padding-top: 39px;
+    padding-right: 40px;
+    padding-left: 37px;
 
     background-color: $color-deep-sky-blue;
     color: $color-default-white;
 
     @include vp-767 {
       width: 100%;
-      padding: 20px;
+      padding: 40px 20px 20px;
     }
   }
 
   h2 {
     margin: 0;
     padding: 0;
-    margin-bottom: 15px;
+    margin-bottom: 3px;
     font-family: $ff-roboto-condensed;
     font-size: 30px;
     line-height: 140%;
@@ -90,8 +90,8 @@
 
   &__close-btn {
     position: absolute;
-    top: 24px;
-    right: 24px;
+    top: 15px;
+    right: 15px;
     z-index: 1;
 
     width: 40px;
@@ -101,6 +101,10 @@
     background: $color-transparent;
     border: none;
     cursor: pointer;
+
+    @include hover-focus {
+      opacity: 0.8;
+    }
   }
 
   &--responsive {
@@ -136,16 +140,122 @@
   }
 }
 
-.modal__form .form__footer {
+.modal__form-header {
+  display: flex;
   flex-direction: column;
+  gap: 20px;
+  border: none;
+  padding: 0;
+  margin-bottom: 25px;
+}
+
+.modal__form input:not(.visually-hidden),
+.modal__form textarea {
+  background: rgba(4, 20, 39, 0.15);
+  border-radius: 3px;
+  border: 1px solid transparent;
+  padding: 15px;
+  width: 100%;
+
+  &::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+
+    color: $color-default-white;
+  }
+
+  @include hover-focus {
+    outline: 1px solid $color-alice-blue;
+    outline-offset: 2px;
+    cursor: pointer;
+  }
+}
+
+.modal__form textarea {
+  padding-bottom: 25px;
+}
+
+.modal__form-button {
+  justify-content: center;
   align-items: center;
+  width: 100%;
+  margin-bottom: 18px;
+  padding: 14px 25px;
+
+  font-size: $fz-default;
+  font-weight: 700;
+  line-height: 19px;
+
+  background-color: $color-black-pearl-button;
+  color: $color-default-white;
+  border: none;
 }
 
-.modal__form--footer .form__button {
+.modal__form-footer label {
+  display: grid;
+  grid-template-columns: 15px auto;
+  gap: 11px;
+
   width: 100%;
-  margin-bottom: 20px;
+  margin: 0;
+  padding-left: 10px;
+  box-sizing: border-box;
+
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 16px;
+
+  @include vp-1023 {
+    width: 48%;
+    padding-top: 10px;
+    align-self: start;
+  }
+
+  @include vp-767 {
+    width: 100%;
+    margin-left: 5px;
+    padding-top: 5px;
+  }
 }
 
-.modal__form .modal__form--footer label {
-  width: 100%;
+.modal__form-mark {
+  width: 15px;
+  height: 15px;
+  align-self: center;
+
+  background-color: transparent;
+  border: 1px solid $color-default-white;
+  border-radius: 2px;
+  box-sizing: border-box;
+
+  &:disabled {
+    opacity: 0.5;
+
+    pointer-events: none;
+  }
+
+  @include hover-focus {
+    opacity: 0.8;
+  }
 }
+
+.modal__form input[type="checkbox"] {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+
+  &:checked + .modal__form-mark {
+    background-image: url("../../img/svg/mark.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+  }
+}
+
