--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -4,11 +4,14 @@
 }
 
 .services__wrapper {
-  max-width: 1240px;
+  padding-right: 20px;
   padding-left: 20px;
-  padding-right: 0;
   padding-top: 65px;
   padding-bottom: 140px;
+
+  @include vp-1439 {
+    padding: 65px 20px 140px;
+  }
 
   @include vp-1023 {
     padding-top: 23px;
@@ -49,7 +52,7 @@
 
 .services__list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, minmax(200px, 350px));
   gap: 85px;
 
   margin: 0;
@@ -164,6 +167,14 @@
       height: 40px;
 
       background-size: 12%;
+    }
+  }
+
+  @include hover-focus {
+    outline: 1px solid $color-deep-sky-blue;
+
+    & h3 {
+      color: $color-deep-sky-blue;
     }
   }
 }
