--- a/source/sass/blocks/featuries.scss
+++ b/source/sass/blocks/featuries.scss
@@ -1,6 +1,8 @@
 .featuries {
   padding: 0;
   padding-top: 120px;
+  padding-left: 20px;
+  padding-right: 20px;
 
   @include vp-1439 {
     padding: 0 20px 120px;
@@ -36,9 +38,7 @@
 
   @include vp-767 {
     grid-template-columns: 1fr;
-    grid-template-rows: minmax(325px, 1fr);
-
-    width: 100%;
+    grid-template-rows: none;
   }
 }
 
@@ -57,18 +57,21 @@
 
   @include vp-1023 {
     padding-right: 25px;
+    padding-bottom: 30px;
   }
 
   @include vp-767 {
-    min-width: 100%;
-    padding-top: 30px;
-    padding-bottom: 55px;
-    padding-left: 25px;
-    padding-right: 25px;
+    min-height: 340px;
+    padding: 30px 25px 35px;
 
     & svg {
       width: 30px;
       height: 30px;
+    }
+
+    &--price,
+    &--confed {
+      min-height: 325px;
     }
   }
 
