--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -6,7 +6,7 @@
 .main-footer__wrapper {
   display: grid;
   grid-template-columns: 28% 38% 1fr;
-  column-gap: 2%;
+  column-gap: 22px;
 
   max-width: 1240px;
   padding-left: 10px;
@@ -40,7 +40,7 @@
     justify-content: space-between;
     align-items: center;
 
-    margin-bottom: 30px;
+    margin-bottom: 23px;
   }
 
   @include vp-767 {
@@ -56,27 +56,19 @@
 }
 
 .main-footer__logo {
-  @include vp-767 {
-    margin-right: 16px;
-  }
-}
-
-/* .main-footer__socials {
-  width: 41%;
-  margin-left: 14px;
-  margin-top: 35px;
+  width: fit-content;
+  margin-bottom: 22px;
+  margin-right: auto;
+  pointer-events: none;
 
   @include vp-1023 {
-    width: 21%;
-    margin-top: 0;
+    margin: 0;
   }
 
   @include vp-767 {
-    width: 65%;
-    margin-left: 0;
-    margin-top: 20px;
+    margin-bottom: 10px;
   }
-} */
+}
 
 .main-footer__accordion {
   padding-left: 8px;
@@ -107,8 +99,13 @@
   max-width: 215px;
 
   margin: 0;
+  margin-left: 10px;
   padding: 0;
   list-style: none;
+
+  @include vp-1023 {
+    margin-right: -5px;
+  }
 
   & li {
     width: 40px;
@@ -154,7 +151,11 @@
 
 .main-footer__nav-list li {
   max-width: 220px;
-  margin-bottom: 8px;
+  margin-bottom: 5px;
+
+  @include vp-1023 {
+    margin-bottom: 5px;
+  }
 }
 
 .main-footer__nav-list a {
@@ -195,6 +196,10 @@
   margin: 0;
   padding: 0;
   list-style: none;
+
+  & li {
+    margin-bottom: 5px;
+  }
 }
 
 .main-footer__contacts-phone a {
