--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -20,7 +20,7 @@
   align-items: center;
 
   padding-left: 20px;
-  padding-right: 80px;
+  padding-right: 5px;
   padding-top: 28px;
   padding-bottom: 30px;
 
@@ -33,8 +33,8 @@
 
   @include vp-767 {
     align-items: center;
-    padding-top: 14px;
-    padding-bottom: 20px;
+    padding-top: 12px;
+    padding-bottom: 15px;
   }
 }
 
@@ -51,13 +51,13 @@
     max-width: 440px;
     gap: 20px;
 
-    padding-top: 10px;
     padding-right: 20px;
   }
 
   @include vp-767 {
     max-width: 200px;
-    padding-right: 2px;
+    padding-right: 10px;
+    padding-top: 0;
   }
 }
 
