--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -257,7 +257,7 @@
   clip-path: inset(100%);
 
   &:checked + .modal__form-mark {
-    background-image: url("../../img/svg/mark.svg");
+    background-image: url("../img/svg/mark.svg");
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
