--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -17,7 +17,7 @@
 .main-header__wrapper {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
 
   padding-left: 20px;
   padding-right: 5px;
@@ -103,6 +103,7 @@
 .main-header__button {
   margin-right: 6%;
   margin-left: auto;
+  margin-top: 8px;
 
   max-width: 160px;
 
